--- a/views/home.ejs
+++ b/views/home.ejs
@@ -87,14 +87,15 @@
 
     </div>
 </body>
-<!-- jQuery (necessary for Bootstrap 's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/jquery.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/web3.min.js"></script>
-<script src="js/truffle-contract.js"></script>
-<script src="js/app.js"></script>
+
 </body>
 
 </html>
+<!-- jQuery (necessary for Bootstrap 's JavaScript plugins) 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+Include all compiled plugins (below), or include individual files as needed -->
+<script src="js/jquery.min.js"></script>
+<script src="scripts/home.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script src="js/web3.min.js"></script>
+<script src="js/truffle-contract.js"></script>
