--- a/views/home.ejs
+++ b/views/home.ejs
@@ -94,8 +94,11 @@
 <!-- jQuery (necessary for Bootstrap 's JavaScript plugins) 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 Include all compiled plugins (below), or include individual files as needed -->
-<script src="js/jquery.min.js"></script>
-<script src="scripts/home.js"></script>
+
+<script src="js/jquery.js"></script>
+
 <script src="js/bootstrap.min.js"></script>
 <script src="js/web3.min.js"></script>
 <script src="js/truffle-contract.js"></script>
+<script src="scripts/dapp.js"></script>
+<script src="scripts/home.js"></script>
