--- a/views/home.ejs
+++ b/views/home.ejs
@@ -82,6 +82,9 @@
 
     </div>
     <div id="buyTicketContainer" class="container">
+        <div id="yourBalance">
+            <h2 id="balanceText">Your Balance in Contract: 100 ETH</h2>
+        </div>
         <form>
             <div class="form-group">
                 <label for="inputTicketNumber">Buy a ticket</label>
