update web3 to frontend but got some transaction errors

--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -1,134 +1,150 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
 
 .top {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  background-color: #444;
-  z-index: 999;
-  color: white;
-  position: sticky;
-  top: 0;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    background-color: #444;
+    z-index: 999;
+    color: white;
+    position: sticky;
+    top: 0;
 }
 
 .topLeft {
-  flex: 3;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    flex: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .topRight {
-  flex: 2;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    flex: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .topCenter {
-  flex: 6;
+    flex: 6;
 }
+
 .topTitle {
-  cursor: pointer;
+    cursor: pointer;
 }
+
 .topList {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
 }
+
 .topListItem {
-  margin-left: 10%;
-  cursor: pointer;
-  margin-right: 10%;
+    margin-left: 10%;
+    cursor: pointer;
+    margin-right: 10%;
 }
+
 .topListItem:hover {
-  color: lightgray;
+    color: lightgray;
 }
 
 .header {
-  padding: 2%;
-  background-color: pink;
-  text-align: center;
+    padding: 2%;
+    background-color: pink;
+    text-align: center;
 }
 
-.todayPrize{
-  font-family: 'Josefin Sans', sans-serif;
-  font-weight: 700;
-  font-size: 40px;
+.todayPrize {
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
 }
 
-.play{
-  padding: 1%;
-  background-color: white;
-  margin-bottom: 2%;
+.play {
+    padding: 1%;
+    background-color: white;
+    margin-bottom: 2%;
 }
 
-.balance{
-  margin-bottom: 1%;
-  font-family: 'Josefin Sans', sans-serif;
-  font-weight: 500;
-  font-size: 30px;
-}
-.userTicket{
-  margin-bottom: 1%;
-  font-family: 'Josefin Sans', sans-serif;
-  font-weight: 500;
-  font-size: 30px;
-  color: tomato;
+.balance {
+    margin-bottom: 1%;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 500;
+    font-size: 30px;
 }
 
-.ticketInput{
-  margin-right: 2%;
-  width: 30%;
+.userTicket {
+    margin-bottom: 1%;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 500;
+    font-size: 30px;
+    color: tomato;
 }
 
-table, th, td{
-  border: solid 1px black;
+.ticketInput {
+    margin-right: 2%;
+    width: 30%;
 }
 
-table{
-  margin: 2% 5%;
-  width: 90%;
-  
+table,
+th,
+td {
+    border: solid 1px black;
 }
 
-.link{
-  text-decoration: none;
-  color: inherit;
+table {
+    margin: 2% 5%;
+    width: 90%;
+}
+
+.link {
+    text-decoration: none;
+    color: inherit;
+}
+
+.about {
+    text-align: center;
+    font-family: 'Josefin Sans', sans-serif;
+    font-weight: 700;
+    font-size: 40px;
+    margin-top: 15%;
 }
