--- a/webapp/src/App.css
+++ b/webapp/src/App.css
@@ -57,9 +57,7 @@
 
 .topRight {
     flex: 2;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
 }
 
 .topCenter {
